-------------------------------------------------------------------------------------

2013-10-16 belangeo <belangeo@gmail.com>

    * Release tag: 0.6.9.
    - rev 1185

2014-04-11 belangeo <belangeo@gmail.com>

    * Added lot of methods to PyoTableObject (retify, bipolarGain, invert, lowpass, fadein, fadeout, pow).
    - rev 1182

2014-04-04 belangeo <belangeo@gmail.com>

    * Added new object: PartialTable, generates waveforms made of inharmonic components.
    - rev 1177

2014-03-12 belangeo <belangeo@gmail.com>

    * Added a Scope example in examples/utilities.
    - rev 1168

2013-12-24 belangeo <belangeo@gmail.com>

    * Added new object: STRev, Stereo reverb.
    - rev 1154

2013-12-24 belangeo <belangeo@gmail.com>

    * Added dataOnly argument to SLMap. User can now control parameters, in ctrl window, that do not accept audio signal but discreet values.
    - rev 1153

2013-12-10 belangeo <belangeo@gmail.com>

    * Added new object: ComplexRes, Complex one-pole resonator filter.
    - rev 1148

2013-10-18 belangeo <belangeo@gmail.com>

    * Added new object: TrackHold, Performs a 'thru' and hold on its input signal.
    - rev 1143

-------------------------------------------------------------------------------------

2013-10-16 belangeo <belangeo@gmail.com>

    * Release tag: 0.6.8.
    - rev 1142

2013-10-16 belangeo <belangeo@gmail.com>

    * Added multi server facility and and embeded callback support for plugin development (code by Guillaume Barrette).
    - rev 1141

2013-10-06 belangeo <belangeo@gmail.com>

    * Add a channel offset to the server physical inputs and outputs.
    - rev 1136

2013-10-03 belangeo <belangeo@gmail.com>

    * Added support for reading/writing various soundfile formats. FLAC and OGG need libsndfile to be compiled with both of them enabled.
    - rev 1133

2013-07-25 belangeo <belangeo@gmail.com>

    * Added new object: PVMix, Mix the most prominent components from two phase vocoder streaming objects.